Color change from green to gray

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ h2 {
   margin-top: 7%;
 }
 .cta {
-  background: #00cc80;
+  background: #434343;
   width: calc(100% - 1em);
   display: block;
   color: white;
